--- a/3-ConditionalsAndLists/project/test.html
+++ b/3-ConditionalsAndLists/project/test.html
@@ -1,7 +1,6 @@
 <html>
 <head>
     <script src="https://unpkg.com/vue@2.3.2"></script>
-
 </head>
 <body>
     <div id="app">
@@ -20,8 +19,11 @@
             <h1>INGREDIENT: {{ ingredient }}</h1>
             <p>NUMBER: {{ index + 1 }}</p>
         </template>
+        <button v-on:click="changeVisible">
+            Click Me!
+        </button>
     </div>
-    <script type="text/javascript" src="/script.js"></script>
+    <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
 
